--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^5.0.0",
+    "express": "^4.21.2",
     "mongodb": "^6.14.2",
     "puppeteer": "^24.3.1",
     "ts-node": "^10.9.2"
