--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.14.2",
+    "openai": "^4.87.3",
     "puppeteer": "^24.3.1",
     "ts-node": "^10.9.2"
   }
